syntax = "proto3";

option java_package = "com.minibaas.proto";
option java_outer_classname = "DatabaseServiceProto";

package baas.proto;

service DatabaseService {
  rpc Insert (InsertRequest) returns (InsertResponse);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Query (QueryRequest) returns (QueryResponse);
  rpc EnhancedQuery (EnhancedQueryRequest) returns (EnhancedQueryResponse);
}

enum ErrorCode {
  OK = 0;
  NOT_FOUND = 1;
  INVALID_DOCUMENT = 2;
  INTERNAL_ERROR = 3;
  INVALID_QUERY = 4;
  UNSUPPORTED_OPERATION = 5;
}

message InsertRequest {
  string collection = 1;
  string id = 2;
  string document = 3;
}

message InsertResponse {
  bool success = 1;
  string error = 2;
  ErrorCode code = 3;
  repeated string generatedIds = 4;
}

message GetRequest {
  string collection = 1;
  string id = 2;
}

message GetResponse {
  string document = 1;
  bool success = 2;
  string error = 3;
  ErrorCode code = 4;
}

message QueryRequest {
  string collection = 1;
  string field = 2;
  string value = 3;
}

message QueryResponse {
  repeated string documents = 1;
  bool success = 2;
  string error = 3;
  ErrorCode code = 4;
}

message EnhancedQueryRequest {
  string collection = 1;
  bool get_all = 2;
  string where_condition = 3;
  int32 limit = 4;
  string fields = 5;
  string sort = 6;
  int32 skip = 7;
}

message EnhancedQueryResponse {
  repeated string documents = 1;
  bool success = 2;
  string error = 3;
  ErrorCode code = 4;
  int32 result_count = 5;
  int32 returned_count = 6;
  bool has_more = 7;
}